# Login_Registration-Cpp

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  LoginRegistration_System.sln  LoginRegistration_System.vcxproj  LoginRegistration_System.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  accountsDB.txt  database.cpp  database.h  database.vcxproj  database.vcxproj.filters  defaultDB.txt  errorHandler.h  hello.yml  loginRegister.sln  loginRegister.vcxproj  loginRegister.vcxproj.filters  main.cpp  test  test.txt  usersDB.txt
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  hello.yml
Cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  database.vcxproj  database.vcxproj.filters  loginRegister.sln  loginRegister.vcxproj  loginRegister.vcxproj.filters
Cmake/apps/: app.vcxproj  app.vcxproj.filters
Cmake/src/: database_library.vcxproj  database_library.vcxproj.filters
apps/: CMakeLists.txt  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  main.cpp
include/: database.h
src/: CMakeLists.txt  cmake_install.cmake  database.cpp  database_library.vcxproj  database_library.vcxproj.filters
